sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:12: error: ')' expected but '}' found.
  }
  ^AlgInsertionSort:14: error: Unmatched closing brace '}' ignored here
          }} 
          ^